assets/css/love_calculator.css
/********************************************
************* GENERAL SETTINGS *************
*********************************************/

* {
    box-sizing                      : border-box;
}

html, body, p{
    margin                          : 0;
    padding                         : 0;
    height                          : 100%;
    font-size                       : 1.5rem;
}

body{
    background-color                : #ffc0cb69; 
}

img{
    max-width                       : 100%;
    height                          : auto;
}

a{
    text-decoration                 : none;
    color                           : rgba(237,158,194,1);;
}

a:hover{
    text-decoration                 : none;
    color                           : moccasin;
}

.container{
    max-width                       : 1200px;
}

.container-md{
    max-width                       : 850px;
}

.hidden{
    display                         : none;
}

/********************************************
******************* TYPOS *******************
*********************************************/

/*font-family: 'Archivo', sans-serif;*/

h1{
    font-family                     : 'Archivo', sans-serif;
    font-size                       : 4rem; 
    font-style                      : italic;
    font-weight                     : 700;
    color                           : mintcream;
}

h3, p, figcaption{
    font-family                     : 'Archivo', sans-serif;
    font-size                       : 1.2rem;
    font-weight                     : 100;
}

button{
    font-weight                     : 200;
    font-family                     : cursive, serif;
}

/********************************************
******************* HEADER ******************
*********************************************/

header{
    margin-bottom                   : 4rem;
}

header div:nth-of-type(1){
    text-align                      : center;
}

header h3{
    background-color                : rgba(245, 255, 250, 0.6);
    font-size                       : 1.2rem;
}

/********************************************
******************* MAIN ********************
*********************************************/

/*** SECTION 1 ***/

/** Form **/

#lovers-form{
    text-align                      : center;
    background-image                : url("../img/yellow-circle.png");
    background-position             : center;
    background-repeat               : no-repeat;
    background-size                 : contain;
    min-height                      : 450px;
    align-items                     : center;
}

#lovers-form input{
    background                      : rgba(255, 255, 255, 0.9);
    border-radius                   : 50px;
    box-shadow                      : 2px 2px 7px rgba(0, 0, 0, 0.1) inset;
    border                          : none;
    min-width                       : 200px;
    margin-top                      : 2rem; 
    height                          : auto;
    margin-top                      : 13%; 
    text-align                      : center; 
}

#lovers-form input::placeholder{
    font-family                     : cursive, serif;
    text-align                      : center;
    color                           :  rgba(248, 189, 88, 0.801);
}

form div:only-child{
    justify-content                 : space-evenly;
}

/*** SECTION 2 ***/

section:nth-of-type(2){
    margin-top                      : 30px;
}

#love-result{
    text-align                      : center;
    align-items                     : center;
    justify-content                 : center;
}

#love-result div:nth-of-type(2){
    margin-bottom: 1rem;
}

#compatibility{
    margin-bottom                   : 2.5rem; 
    margin-right                    : 13px;
    position                        : relative;
    z-index                         : 1;
    transform                       : rotate(-45deg);
    color                           : honeydew;
    text-align                      : center;  
    font-size                       : 1.5rem;   
}

.love-btn{
    background                      : rgb(237,158,194);
    background                      : linear-gradient(0deg, rgba(237,158,194,1) 5%, rgba(241,216,227,1) 95%);
    text-shadow                     : 0px 1px 0px rgba( 0, 0, 0, 0.2);
    box-shadow                      : 0 0 5px rgba( 0, 0, 0, 0.2), 0 -1px 1px rgba( 255, 255, 255, 0.6) inset;
    border                          : none; 
    color                           : honeydew;
    border-radius                   : 50px;
    font-weight                     : 200;
    font-size                       : 1rem;
    height                          : 2.5rem;
    width                           : 8rem;
    font-family                     : cursive, serif;
} 


.heart-shape
{
    position                        : relative;
    width                           : 4rem;
    height                          : 4rem;
    background                      : rgba(237,158,194,1);
    transform                       : rotate(45deg);
    margin-top                      : 1rem;
    align-self                      : center;
    box-shadow                      : 0 0 5px rgba( 0, 0, 0, 0.2), 0 -1px 1px rgba( 255, 255, 255, 0.6) inset;
    margin-bottom                   : 2rem;
}


.heart-shape::before,
.heart-shape::after{
  position                          : absolute;
  width                             : 4rem;
  height                            : 4rem;
  content                           : '';
  border-radius                     : 50%;
  background-color                  : rgba(237,158,194, 1);
}

.heart-shape::before{
  bottom                            : 0px;
  left                              : -2rem;
  background                        : linear-gradient(85deg, rgba(241,216,227,1) 8%, rgba(237,158,194,1) 35%);
}

.heart-shape::after{
  top                               : -2rem;
  right                             : 0px;
  background                        : linear-gradient(170deg, rgba(241,216,227,1) 8%, rgba(237,158,194,1) 35%);
}

figure img{
    border-radius                   : 50%;
    max-height                      : 350px;
    max-width                       : 100%;
    margin-bottom                   : 1rem;
}

figcaption{
    font-size                       : 1rem;
    background-color                : rgba(245, 255, 250, 0.5);
    letter-spacing                  : 0.7px;
}

#start-again{
    margin-bottom                   : 2rem;
}


/********************************************
******************* FOOTER ******************
*********************************************/

footer{
    text-align                      : center;
    letter-spacing                  : 0.2rem;
    margin-top                      : 80px;
}

